--- a/Wallet_test/Wallet.Tests/Wallet.Tests.csproj
+++ b/Wallet_test/Wallet.Tests/Wallet.Tests.csproj
@@ -53,6 +53,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Wallet_test\Wallet_test.csproj">
+      <Project>{58a755ca-d36b-457b-8111-9d3be3b41b30}</Project>
+      <Name>Wallet_test</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
